Stop scrollbars from covering text in flux editor

--- a/ui/src/style/components/code-mirror/_time-machine.scss
+++ b/ui/src/style/components/code-mirror/_time-machine.scss
@@ -7,6 +7,7 @@
 .cm-s-time-machine {
   background-color: $g1-raven;
   color: $g11-sidewalk;
+  padding-right: 16px;
 
   .cm-variable {
     color: $c-pool;
